create home-13, but with problems

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Nunito&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito&family=Poppins&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -21,16 +27,21 @@
               <a href="">
                 <img src="image/Mail.svg" alt="Mail" />
               </a>
+              <div class="e-mail">Email: Plantingservice@7oroof.com</div>
             </div>
             <div class="phone">
               <a href="">
                 <img src="image/Vector.svg" alt="Phone" />
               </a>
+              <div class="phone-number">+01 123456789</div>
             </div>
             <div class="location">
               <a href="">
                 <img src="image/Location.svg" alt="Location" />
               </a>
+              <div class="location-text">
+                2072 Pinnickinick Street, WA 98370
+              </div>
             </div>
           </div>
           <div class="language">
@@ -46,10 +57,52 @@
           </div>
           <div class="call-and-menu">
             <div class="callbutton">
-                <img src="image/Call Button.svg" alt="">
+              <img src="image/Call Button.svg" alt="" />
             </div>
             <div class="menu">
-                <img src="image/navbar-menu.svg" alt="">
+              <img src="image/navbar-menu.svg" alt="" />
+            </div>
+          </div>
+          <div class="frame">
+            <div class="frame-menu">
+              <div class="frame-menu-item">
+                <a href="">Home</a>
+                <div class="black-arrow">
+                  <img src="image/arrow-black.svg" alt="black-arrow" />
+                </div>
+              </div>
+              <div class="frame-menu-item">
+                <a href="">Company</a>
+                <div class="black-arrow">
+                  <img src="image/arrow-black.svg" alt="black-arrow" />
+                </div>
+              </div>
+              <div class="frame-menu-item">
+                <a href="">Services</a>
+                <div class="black-arrow">
+                  <img src="image/arrow-black.svg" alt="black-arrow" />
+                </div>
+              </div>
+              <div class="frame-menu-item">
+                <a href="">Project</a>
+                <div class="black-arrow">
+                  <img src="image/arrow-black.svg" alt="black-arrow" />
+                </div>
+              </div>
+              <div class="frame-menu-item">
+                <a href="">Blog</a>
+                <div class="black-arrow">
+                  <img src="image/arrow-black.svg" alt="black-arrow" />
+                </div>
+              </div>
+              <div class="last-item">
+                <a href="">Contact</a>
+              </div>
+            </div>
+            <div class="frame-callbutton">
+              <a href=""
+                ><img src="image/laptop-call-button.svg" alt="Call Button"
+              /></a>
             </div>
           </div>
         </div>
